--- a/Menu.html
+++ b/Menu.html
@@ -1,10 +1,12 @@
 Controle de Venda de Pizzas 
 
 Pizzaria: Pizza Alegre
-Versão: 002
+Versão: 003
 Operador:
 
 Telefone:
 Cliente:
 CPF:
 E-mail:
+
+Aceita participar de promoções:? ()Sim ()Não
